# EUI_EME_C_PROGRAMMING

./: CMakeLists.txt  README.md  main.c  std.h
Projects/bus_reservation_app/: bus.c  bus.h  bus_reserve_app.c  bus_reserve_app.h  ticket.c  ticket.h  user.c  user.h
Projects/bus_reservation_app/docs/: bus_reservation_simplify.puml
Projects/bus_reservation_app/helpers/: test.c  test.h
Projects/console_calculator/: calculator.c
day2/: day_task.c  day_task.h  febonanci.c  febonanci.h  max_profit_finder.c  max_profit_finder.h  second_biggest.c  second_biggest.h  swap_two_numbers.c  swap_two_numbers.h
day3/: largest_water_tank.c  largest_water_tank.h  palindrome.c  palindrome.h  shift_arr.c  shift_arr.h
day4/: calculator.c  calculator.h  stack.c  stack.h
day5_bus_reservation_project/: bus.c  bus_reserve_app.c  bus_reserve_app.h  ticket.h  user.c  user.h
day5_bus_reservation_project/helpers/: test.c
day5_bus_reservation_project/helpers/circular_queue/: cqueue_interface.h  cqueue_preconfig.h  cqueue_program.c
test/: test.c  test.h
test/TestCases/: largest_area.csv  palindrome.csv  palindrome_digits.csv  shift.csv
